--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
                         </li>
                     </ul>
                     <div>
-                        <button class="btn btn-light" type="button" href="login.html" onclick="sair()">Sair</button>
+                        <a class="btn btn-light" type="button" href="login.html">Sair</a>
+                        <!-- <button class="btn btn-light" type="button" href="login.html" onclick="sair()">Sair</button> -->
                     </div>
                 </div>
         </nav>
